2004-06-10  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Span the Strip check box so it doesn't play around with spacing.

2004-06-10  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Use the new file selector.

2004-06-10  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/Makefile.am:
	* tests/Makefile.am:
	Depend on GTK+ 2.4, and re-arrange some variables.

2004-06-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.12. Anyone accusing me of revisionism will be taken
	outside and shot.
	
2004-06-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add colons to the Preferences dialog. Oh, and 200 lines of new
	properties from the new Glade.

2004-06-07  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Force the sample track/album strings to be translated. Another
	patch from Mariano, closing #136479.
	
2004-06-07  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Close the dialogue when the WM close button is pressed.  Patch
	from Mariano Suárez-Alvarez, closing #143780.

2004-06-01  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" Bulgarian

2004-06-01  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Watch the Strip Characters and Eject preferences for changes.

2004-05-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Mark Eject for localisation. Thanks to Stephane Raimbault for
	noticing.

2004-05-14  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Add %tN-%tA-%tT to file_patterns (closes: #142207)

2004-05-08  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (device_changed_cb):
	* src/sj-prefs.c: (prefs_get_default_device), (cd_drive_exists):
	* src/sj-prefs.h: use existing CD drive if we can't find the one
	specified in GConf (Closes: #130609)

2004-05-07  Bastien Nocera  <hadess@hadess.net>
