@@ -1,3 +1,9 @@
+2004-06-11  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	Don't go weird when someone changes CD whilst the completed
+	dialogue is open. Patch from Sean Proctor closing 143998.
+
 2004-06-10  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
